# ecg_plot

./: CMakeLists.txt  ecg_reader.cpp  ecg_reader.h  main.cpp  widget.cpp  widget.h  widget.ui
